# visualizer-mathematics

./: .gitignore  CMakeLists.txt  README.md  check_exe.py  curve_visualizer.html  main.js  package-lock.json  package.json  x_squared.csv
.github/workflows/: build-sfml-windows.yml  build-sfml.yml  build-windows.yml  build.yml
cpp/: CMakeLists.txt  README.md
cpp/cli/: main.cpp
cpp/core/include/vm_core/: AsciiPlot.h  CoordMapper.h  CsvExport.h  Sampler.h  Vec2.h
cpp/core/src/: AsciiPlot.cpp  Sampler.cpp
cpp/tests/: test_coord_mapper.cpp  test_sampler.cpp
sfml/: App.cpp  App.h  MathFunctions.h  Renderer.cpp  Renderer.h  ViewTransform.h  main.cpp
sfml-visualizer/: CMakeLists.txt
sfml-visualizer/src/: App.cpp  App.hpp  Constants.hpp  InputHandler.cpp  InputHandler.hpp  MathFunctions.cpp  MathFunctions.hpp  Renderer.cpp  Renderer.hpp
sfml/resources/: FontData.h
src/: CurveData.h  ExprParser.cpp  ExprParser.h  MainWindow.cpp  MainWindow.h  Plot2DWidget.cpp  Plot2DWidget.h  Plot3DWidget.cpp  Plot3DWidget.h  app.js  index.html  main.cpp  parser.js  plotter.js  styles.css
